GPC/tests/examples/pass/ifElse.gpc


int ifElse(int i) {
    
    string s = "hello";
    char c = 'b';

    if (i < 5) {
        return 2;
    } else {
        return 3;
    }
   
}
