GPC/tests/examples/fail/wrongTypeDecl3.gpc


bool wrongTypeDecl3() {

    bool x = false;
    int a = 5;
    return a && x;

}
